# websearch-test

./: Dockerfile  default.nix  k8s.yaml  nginx-mcp.conf  pyproject.toml  result  server.py  test_cognito_auth.py
.github/workflows/: ci.yml
npins/: sources.json
tests/: test_cognito_auth.py  test_server.py
