[project]
name = "gemini-websearch-mcp"
version = "0.1.0"
description = "MCP server for web search via Gemini Grounding with Google Search"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "google-genai>=1.14.0",
    "certifi>=2024.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
