[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-websearch-mcp"
version = "0.1.0"
description = "MCP server for web search via Gemini Grounding with Google Search"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.1",
    "google-genai>=1.14.0",
    "asyncpg>=0.29",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.uv.extra-build-dependencies]
gemini-websearch-mcp = ["setuptools", "wheel"]
